--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "ionicons": "^7.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ionicons": "^4.2.1",
     "react-router-dom": "^6.23.1",
     "styled-components": "^6.1.11"
   },
